--- a/courses/templates/courses/all_students.html
+++ b/courses/templates/courses/all_students.html
@@ -1,9 +1,18 @@
-{% if all_students %}
-    <ul>
-        {% for student in all_students %}
-        <li><a href="{% url 'courses:student_detail' student.z_id %}">{{ student }} - {{ student.z_id }}</a></li>
-        {% endfor %}
-    </ul>
-{% else %}
-    <p>There are no students</p>
-{% endif %}
+{% extends 'courses/base.html' %}
+
+{% block content %}
+    <h2>All students</h2>
+    {% if all_students %}
+        <ul class="list-group">
+            {% for student in all_students %}
+            <a href="{% url 'courses:student_detail' student.z_id %}"
+                class="list-group-item list-group-item-action">{{ student }} - {{ student.z_id }}</a>
+            {% endfor %}
+        </ul>
+        <br />
+    {% else %}
+        <p>There are no students</p>
+    {% endif %}
+    <input type="button" value="Add new student" class="btn btn-primary btn-sm" 
+        onclick="location.href='{% url 'courses:new_student' %}'">
+{% endblock %}
