--- a/courses/templates/courses/new_student.html
+++ b/courses/templates/courses/new_student.html
@@ -1,16 +1,17 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>New student</title>
-    </head>
-    <body>
-        <h2>Add a new student</h2>
-        <form method="post">
-            {% csrf_token %}
-            <table>
-                {{ form.as_table }}
-            </table>
-            <button type="submit">Add</button>
-        </form>
-    </body>
-</html>
+{% extends 'courses/base.html' %}
+
+{% load crispy_forms_tags %}
+
+{% block content %}
+    <h2>Add a new student</h2>
+    <form|crispy method="post">
+        {% csrf_token %}
+        <table>
+            {{ form.as_table }}
+        </table>
+        <button type="submit" class="btn btn-success btn-sm">Add</button>
+    </form>
+    <br /><br />
+    <input type="button" value="Cancel" class="btn btn-secondary btn-sm"
+        onclick="location.href='{% url 'courses:all_students' %}'">
+{% endblock %}
